--- a/wx_h5_front/public/index.html
+++ b/wx_h5_front/public/index.html
@@ -23,6 +23,7 @@
       //  e.addEventListener("DOMContentLoaded", a, !1))
       // }(window);
     </script>
+    <!-- <script src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js" ></script> -->
   </head>
   <body>
     <noscript>
